--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,6 @@ pipeline {
     }
 
     stages {
-
         stage('Checkout Code') {
             steps {
                 checkout scm
@@ -17,38 +16,30 @@ pipeline {
 
         stage('Login to AWS ECR') {
             steps {
-                withAWS(region: "${AWS_REGION}", credentials: 'aws-cred') {
-                    sh '''
-                        aws ecr get-login-password --region $AWS_REGION | \
-                        docker login --username AWS --password-stdin $ECR_REGISTRY
-                    '''
-                }
+                // No credentials required — uses EC2 IAM role automatically
+                sh '''
+                aws ecr get-login-password --region $AWS_REGION | \
+                docker login --username AWS --password-stdin $ECR_REGISTRY
+                '''
             }
         }
 
         stage('Build Docker Image') {
             steps {
-                sh '''
-                    docker build -t $ECR_REPO .
-                '''
+                sh 'docker build -t $ECR_REPO .'
             }
         }
 
         stage('Tag Docker Image') {
             steps {
-                sh '''
-                    docker tag $ECR_REPO:latest $ECR_REGISTRY/$ECR_REPO:latest
-                '''
+                sh 'docker tag $ECR_REPO:latest $ECR_REGISTRY/$ECR_REPO:latest'
             }
         }
 
         stage('Push Image to ECR') {
             steps {
-                sh '''
-                    docker push $ECR_REGISTRY/$ECR_REPO:latest
-                '''
+                sh 'docker push $ECR_REGISTRY/$ECR_REPO:latest'
             }
         }
     }
 }
-
