--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,11 +16,14 @@ pipeline {
 
         stage('Login to AWS ECR') {
             steps {
-                // No credentials required — uses EC2 IAM role automatically
-                sh '''
-                aws ecr get-login-password --region $AWS_REGION | \
-                docker login --username AWS --password-stdin $ECR_REGISTRY
-                '''
+                withCredentials([usernamePassword(credentialsId: 'aws-cred', 
+                                                usernameVariable: 'AWS_ACCESS_KEY_ID', 
+                                                passwordVariable: 'AWS_SECRET_ACCESS_KEY')]) {
+                    sh '''
+                        aws ecr get-login-password --region $AWS_REGION | \
+                        docker login --username AWS --password-stdin $ECR_REGISTRY
+                    '''
+                }
             }
         }
 
