--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,72 +2,56 @@ pipeline {
     agent any
 
     environment {
-        AWS_REGION      = "us-east-1"
-        ECR_REGISTRY    = "189598237274.dkr.ecr.us-east-1.amazonaws.com"
-        ECR_REPO        = "zeeshan.agency"
-        FULL_IMAGE      = "189598237274.dkr.ecr.us-east-1.amazonaws.com/zeeshan.agency:latest"
-        CONTAINER_NAME  = "zeeshan-app"
+        AWS_REGION = "us-east-1"
+        ECR_REPO = "189598237274.dkr.ecr.us-east-1.amazonaws.com/zeeshan.agency"
+        IMAGE_TAG = "latest"
     }
 
     stages {
 
-        stage('Checkout Code') {
+        stage('Clone Code') {
             steps {
-                git branch: 'main', url: 'https://github.com/zeeshaan02/jenkins012.git'
+                git branch: 'main',
+                    url: 'https://github.com/zeeshaan02/jenkins-ecr.git'
             }
         }
 
         stage('Login to AWS ECR') {
             steps {
-                withCredentials([usernamePassword(
-                    credentialsId: 'aws-cred',
-                    usernameVariable: 'AWS_ACCESS_KEY_ID',
-                    passwordVariable: 'AWS_SECRET_ACCESS_KEY'
-                )]) {
-                    sh '''
-                        aws ecr get-login-password --region $AWS_REGION | \
-                        docker login --username AWS --password-stdin $ECR_REGISTRY
-                    '''
-                }
+                sh """
+                aws ecr get-login-password --region $AWS_REGION \
+                | docker login --username AWS --password-stdin $ECR_REPO
+                """
             }
         }
 
         stage('Build Docker Image') {
             steps {
-                sh '''
-                    docker build -t $ECR_REPO .
-                '''
+                sh """
+                docker build -t zeeshan-app .
+                docker tag zeeshan-app:latest $ECR_REPO:$IMAGE_TAG
+                """
             }
         }
 
-        stage('Tag Docker Image') {
+        stage('Push Image to ECR') {
             steps {
-                sh '''
-                    docker tag $ECR_REPO:latest $FULL_IMAGE
-                '''
+                sh """
+                docker push $ECR_REPO:$IMAGE_TAG
+                """
             }
         }
 
-        stage('Push to ECR') {
+        stage('Deploy on EC2') {
             steps {
-                sh '''
-                    docker push $FULL_IMAGE
-                '''
-            }
-        }
-
-        stage('Deploy Container') {
-            steps {
-                sh '''
-                    echo "Stopping old container if running..."
-                    docker stop $CONTAINER_NAME || true
-                    docker rm $CONTAINER_NAME || true
-
-                    echo "Running the latest container..."
-                    docker run -d --name $CONTAINER_NAME -p 5000:5000 $FULL_IMAGE
-
-                    echo "Deployment successful!"
-                '''
+                sh """
+                ssh -o StrictHostKeyChecking=no ec2-user@34.238.189.111 << 'EOF'
+                    sudo docker pull $ECR_REPO:$IMAGE_TAG
+                    sudo docker stop app || true
+                    sudo docker rm app || true
+                    sudo docker run -d -p 5000:5000 --name app $ECR_REPO:$IMAGE_TAG
+                EOF
+                """
             }
         }
     }
