--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,8 +6,8 @@ pipeline {
         ECR_REPO = "189598237274.dkr.ecr.us-east-1.amazonaws.com/zeeshan.agency"
         IMAGE_TAG = "latest"
         EC2_USER = "ubuntu"
-        EC2_IP = "44.192.114.183"           // Public IP for SSH
-        SSH_KEY = "/var/lib/jenkins/.ssh/your-key.pem"  // Private key path
+        EC2_IP = "44.192.114.183"           // Public IP of EC2
+        SSH_KEY = "/var/lib/jenkins/.ssh/your-key.pem"  // Jenkins private key path
     }
 
     stages {
@@ -22,6 +22,7 @@ pipeline {
         stage('Login to AWS ECR') {
             steps {
                 sh """
+                export PATH=\$PATH:/usr/local/bin
                 aws ecr get-login-password --region $AWS_REGION \
                 | docker login --username AWS --password-stdin $ECR_REPO
                 """
@@ -48,14 +49,23 @@ pipeline {
         stage('Deploy on EC2') {
             steps {
                 sh """
-                ssh -i $SSH_KEY -o StrictHostKeyChecking=no $EC2_USER@$EC2_IP << 'EOF'
-                    sudo docker pull $ECR_REPO:$IMAGE_TAG
-                    sudo docker stop app || true
-                    sudo docker rm app || true
-                    sudo docker run -d -p 5000:5000 --name app $ECR_REPO:$IMAGE_TAG
-                EOF
+                ssh -i $SSH_KEY -o StrictHostKeyChecking=no $EC2_USER@$EC2_IP << EOF
+                    docker pull $ECR_REPO:$IMAGE_TAG
+                    docker stop app || true
+                    docker rm app || true
+                    docker run -d -p 5000:5000 --name app $ECR_REPO:$IMAGE_TAG
+EOF
                 """
             }
+        }
+    }
+
+    post {
+        success {
+            echo "✅ Pipeline executed successfully!"
+        }
+        failure {
+            echo "❌ Pipeline failed!"
         }
     }
 }
