--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
         stage('Login to AWS ECR') {
             steps {
                 // Use Jenkins AWS credentials
-                withCredentials([usernamePassword(credentialsId: 'aws-ecr-creds1', 
+                withCredentials([usernamePassword(credentialsId: 'aws-ecr-creds', 
                                                   usernameVariable: 'AWS_ACCESS_KEY_ID', 
                                                   passwordVariable: 'AWS_SECRET_ACCESS_KEY')]) {
                     sh """
