--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
 
         stage('Login to AWS ECR') {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'aws-ecr-creds02, 
+                withCredentials([usernamePassword(credentialsId: 'aws-ecr-creds02', 
                                                   usernameVariable: 'AWS_ACCESS_KEY_ID', 
                                                   passwordVariable: 'AWS_SECRET_ACCESS_KEY')]) {
                     sh """
